# ETS_repo

./: .gitignore  README.md  pyproject.toml
data/processed/: net_positions_by_activity.xlsx
notebooks/: transactions.ipynb  union_registries_dfs.ipynb
