[project]
name = "ets_repo"
version = "0.1.0"
description = ""
authors = [
    {name = "atr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "notebook (>=7.5.3,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{ include = "ets_repo", from = "src" }]
